changed the steps button color and the steps modal content and fixed the hero section alignment

--- a/src/app/components/landing-page/hero/hero.component.scss
+++ b/src/app/components/landing-page/hero/hero.component.scss
@@ -18,17 +18,19 @@
   width: 100%;
   min-height: calc(100vh - 100px);
   position: relative;
-  padding: 12.5rem 0 7.5rem;
+  padding: 8rem 0 7.5rem;
   overflow: hidden;
   background: linear-gradient(-45deg, #9c27b0 20%, #6a1b9a 70%);
+  display: flex;
+  align-items: center;
 
   @media (min-width: 1280px) {
     // height: 780px;
-    padding: 15rem 0 2.5rem;
+    padding: 8rem 0 2.5rem;
   }
 
   @media (max-width: 600px) {
-    padding: 12.5rem 0 5rem;
+    padding: 8rem 0 5rem;
   }
 }
 
@@ -250,6 +252,7 @@
 .hero-container {
   max-width: 1400px;
   margin: 0 auto;
+  margin-bottom: 100px;
   padding: 0 2rem;
   position: relative;
   z-index: 3;
